--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           ref: ${{ github.ref }}
       - name: install
         run: |
-          yarn install
+          npm install
       - name: test
         run: |
           npm test
