--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1"
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
