--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,14 @@ on:
 jobs:
   deploy:
     name: deploy
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          ref: ${{ github.ref }}
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       - name: install
         run: |
           npm install
