--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
 
   "ignorePatterns": ["node_modules/"],
   "rules": {
+    "react/function-component-definition": [2, {
+      "namedComponents": "function-declaration",
+    }]
   }
 }
