--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,9 @@
 {
   "extends": "./index.js",
   "parserOptions": {
-    "project": "./tsconfig.json",
+    "project": "./tsconfig.json"
   },
 
   "ignorePatterns": ["node_modules/"],
-  "rules": {
-    "react/function-component-definition": [2, {
-      "namedComponents": "function-declaration",
-    }]
-  }
+  "rules": {}
 }
